# tg2sip_tgcalls_webrtc

./: Dockerfile  README.md  config_site.h  docker-compose.yml  docker_build.sh  instruction.md  readme.txt  settings.ini
all/: CMakeLists.txt  readme.txt
all/prod/: INIReader.h  gateway.cpp  gateway.h  gen_db.cpp  main.cpp  queue.h  settings.cpp  settings.h  sip.cpp  sip.h  sml.hpp  tg.cpp  tg.h
